# speak_term

./: Cargo.toml
src/: main.rs
static/: app.js  index.html  style.css
